# annotator

./: Dockerfile  README.md  pyproject.toml
.agents/skills/annotator-api/: SKILL.md
.agents/skills/annotator-cli/: SKILL.md
example/: config.yaml  input.txt
src/annotator/: __init__.py  config.py  draw.py  layout.py  main.py  renderer.py  server.py
src/annotator/static/: index.html
tests/: test_renderer.py  test_server.py
