[project]
name = "annotator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "reportlab>=4.5.1",
    "uvicorn>=0.48.0",
]

[project.scripts]
annotator = "annotator.main:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["annotator"]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.42",
]



